amazon-sns/4.7/modules/ROOT/pages/amazon-sns-connector-upgrade-migrate.adoc
= Upgrade Amazon SNS Connector to Version 4.7
:page-aliases: connectors::amazon/amazon-sns-connector-upgrade-migrate.adoc

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|4.6.x |4.7.x
|===

== Changes

=== 4.7

* Added support for *FIFO (first in first out) Topic*, which together with *Amazon SQS FIFO queues* provide strict message ordering and message deduplication.

=== 4.6

* Added a new notification option. Use the *Phone number* parameter to send a text message to a specified phone number. This option is offered in addition to *Target Arn* and *Topic Arn*, which are the existing notification options.

=== 4.5

* Added the ability to configure TLS and custom SNS and STS endpoints.
* Upgraded `aws-java-sdk` from 1.11.611 to 1.11.969.
* Upgraded `aws-connector-commons` from 2.0.0 to 2.3.0.

== Requirements

Ensure your system meets the following requirements before you perform the upgrade:

[%header%autowidth.spread]
|===
|Application/Service|Version
|Mule |4.1.1 and later
|Amazon Java SDK for RDS|v1.11.969
|Java|1.8.0_x
|Anypoint Studio|7.1 and later
|===

See the xref:release-notes::connector/amazon-sns-connector-release-notes-mule-4.adoc[Amazon SNS Connector Release Notes] for updated compatibility information for patch updates.

== Upgrade Prerequisites

Before you perform the upgrade, create a backup of your files, data, and configuration in case you need to restore to the previous version.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
